feat: recruiter UX overhaul, pipeline workspace, and channel sourcing
Unify business-facing copy and navigation for HR recruiters, add pipeline board with resume-first candidate workspace, match evaluation panels, job workbench improvements, and Boss/Liepin channel recruitment backend plus SQL migrations.

Co-authored-by: Cursor <cursoragent@cursor.com>